# PiPetCam

./: LICENSE  README.md
camera_version/: README.md  pi_pet.c  plotting_movement.c  plotting_movement.h
daemon_version/: README.md  RaspiFastCamD.c  compile.sh
data_visualisation/: README.md  Thumbs.db  capture.sh  client.html  client.js  package.json  read_file.js  server.js  snapshot.html  socket.c  socket.js  socket_client.c  socket_server.c  streaming.html  style.css  test.js
data_visualisation/css/: starter.css
data_visualisation/scripts/: capture.sh  start_stream.sh
doc/: Chapter 1.md  Chapter 2.md  Chapter 3.md  FAQ.md  README.md  chapter1-datatracking.md  chapter2-region_events-b.md  chapter3-making_an_interface.md  introduction.md  streaming.md
incomplete/server in c/: README  pipetcam.h  socket.c  socket_server.c
raspicam_fastcamd/: CMakeLists.txt  RaspiFastCamD.c  compile.sh
raspicam_fastcamd/raspifastcamd_scripts/: README  do_caputure.sh  raspifastcamd  start_camd.sh  stop_camd.sh  test_rpi_camera_small.py
raspicam_overlay/: CMakeLists.txt  opencv_demo.c
raspicam_pet/: CMakeLists.txt  RaspiStill - Copy.c  RaspiStill.c  compile.sh  pi_pet.c  plotting_movement.cpp  plotting_movement.h  test.c
raspicam_vanilla/: RaspiStill.c  compile.sh
streaming/: README.md
tutorial_code/chapter_1/: colour_tracking.cpp  colour_tracking.py
tutorial_code/chapter_3/: Thumbs.db  snapshot.html
tutorial_code/chapter_4/: code22.cpp  new_socket.c
webcam_version/: CMakeLists.txt  README.md  plotting_movement.cpp  plotting_movement.h
(+32 files in other folders)
